; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_ice1724.c_snd_ice1724_put_route_val.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_ice1724.c_snd_ice1724_put_route_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ice1712 = type { i32 }

@snd_ice1724_put_route_val.xroute = internal constant [8 x i8] c"\00\02\03\06\07\00\00\00", align 1
@ROUTE_PLAYBACK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @snd_ice1724_put_route_val(%struct.snd_ice1712* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.snd_ice1712*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.snd_ice1712* %0, %struct.snd_ice1712** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %5, align 4
  %11 = urem i32 %10, 5
  %12 = zext i32 %11 to i64
  %13 = getelementptr inbounds [8 x i8], [8 x i8]* @snd_ice1724_put_route_val.xroute, i64 0, i64 %12
  %14 = load i8, i8* %13, align 1
  %15 = zext i8 %14 to i32
  store i32 %15, i32* %8, align 4
  %16 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %17 = load i32, i32* @ROUTE_PLAYBACK, align 4
  %18 = call i32 @ICEMT1724(%struct.snd_ice1712* %16, i32 %17)
  %19 = call i32 @inl(i32 %18)
  store i32 %19, i32* %7, align 4
  store i32 %19, i32* %5, align 4
  %20 = load i32, i32* %6, align 4
  %21 = shl i32 7, %20
  %22 = xor i32 %21, -1
  %23 = load i32, i32* %5, align 4
  %24 = and i32 %23, %22
  store i32 %24, i32* %5, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load i32, i32* %6, align 4
  %27 = shl i32 %25, %26
  %28 = load i32, i32* %5, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %5, align 4
  %30 = load i32, i32* %5, align 4
  %31 = load i32, i32* %7, align 4
  %32 = icmp ne i32 %30, %31
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %9, align 4
  %34 = load i32, i32* %9, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %42

36:                                               ; preds = %3
  %37 = load i32, i32* %5, align 4
  %38 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %39 = load i32, i32* @ROUTE_PLAYBACK, align 4
  %40 = call i32 @ICEMT1724(%struct.snd_ice1712* %38, i32 %39)
  %41 = call i32 @outl(i32 %37, i32 %40)
  br label %42

42:                                               ; preds = %36, %3
  %43 = load i32, i32* %9, align 4
  ret i32 %43
}

declare dso_local i32 @inl(i32) #1

declare dso_local i32 @ICEMT1724(%struct.snd_ice1712*, i32) #1

declare dso_local i32 @outl(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
